# tracedge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  BLUEPRINT.md  DRIFT.md  FIX_PLAN.md  GLOSSARY.md  LAUNCH_CONTENT.md  MARKETING.md  PLAN.md  README.md  USER_MANUAL.md  USE_CASES.md  opencode.json  pyproject.toml
.githooks/: post-commit
.github/workflows/: ci.yml  publish.yml
.opencode/agent/: ci-monitor.md  repo-status.md
benchmarks/: __init__.py  __main__.py  report.py  runner.py  tasks.py
examples/: code_task.py  end_to_end.py  real_llm_task.py  tic_tac_toe.py
scripts/: check-violations.sh  ci-poll.sh  ci-status.sh  security-scan.sh  test-plan.sh  update-violations.sh  verify_doc_snippets.py
src/autoharness/: main.py
src/autoharness/environment/: game_env.py  protocol.py  tool_env.py
src/autoharness/intelligence/: critic.py  llm_client.py  refiner.py
src/autoharness/ir/: harness.py  upir.py  validator.py
src/autoharness/memory/: store.py
src/autoharness/reward/: scorer.py
src/autoharness/runtime/: seed.py  state.py  step.py  vm.py
src/autoharness/sandbox/: __init__.py  guardrails.py  harness_runner.py  workspace.py
src/autoharness/search/: thompson.py
src/autoharness/skills/: extractor.py  pruner.py
src/autoharness/trace/: trace_ir.py
src/tracedge/: config.py  main.py
src/tracedge/compiler/: credit.py  passes.py  scheduler.py
src/tracedge/environment/: game_env.py  tool_env.py
src/tracedge/intelligence/: llm_client.py  refiner.py
src/tracedge/ir/: nodes.py  upir.py
src/tracedge/memory/: store.py
src/tracedge/runtime/: seed.py  state.py  vm.py
src/tracedge/sandbox/: harness_runner.py  workspace.py
src/tracedge/search/: thompson.py
src/tracedge/skills/: extractor.py  pruner.py
tests/: conftest.py  test_demo.py
tests/compiler/: test_credit.py  test_passes.py  test_phi.py  test_scheduler.py
tests/environment/: test_game_env.py  test_tool_env.py
tests/integration/: test_end_to_end.py  test_main.py
tests/intelligence/: test_critic.py  test_extractor.py  test_llm_client.py  test_pruner.py  test_refiner.py  test_skill_exec.py  test_store.py
tests/ir/: test_harness.py  test_nodes.py  test_upir.py  test_validator.py
tests/plan/: test_architecture_boundaries.py  test_conventions.py  test_dependencies.py  test_feature_completeness.py
tests/reward/: test_scorer.py  test_value.py
tests/runtime/: test_seed.py  test_state.py  test_step.py  test_vm.py
tests/sandbox/: test_guardrails.py  test_harness_runner.py  test_workspace.py
tests/search/: test_thompson.py
tests/skills/: __init__.py  test_extractor_phase2.py
tests/trace/: test_trace_ir.py
