[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoharness"
version = "0.1.0"
description = "Probabilistic program compiler over UPIR with Thompson tree search"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0",
    "bandit>=1.8.0",
    "safety>=3.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.bandit]
targets = ["src/autoharness"]
exclude_dirs = ["tests"]
# Skip specific checks:
# B101: assert usage (fine in tests, not in src)
# B105: hard-coded password strings (not applicable)
# B311: random module usage (we use seeded random intentionally)
skips = ["B101", "B105", "B311"]
