[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracedge"
version = "0.2.1"
description = "Probabilistic program compiler over UPIR with Thompson tree search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "S Tenkanen"}]
keywords = ["ai", "llm", "probabilistic-programming", "compiler", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0,<3",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0",
    "bandit[toml]>=1.8.0",
    "pip-audit>=2.6",
]

[project.urls]
Homepage = "https://github.com/sayedtenkanen/tracedge"
Repository = "https://github.com/sayedtenkanen/tracedge"
Issues = "https://github.com/sayedtenkanen/tracedge/issues"

[project.scripts]
tracedge = "tracedge.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tracedge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers --cov=tracedge --cov-report=term-missing --cov-fail-under=94"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH", "RUF100"]

[tool.bandit]
targets = ["src/tracedge"]
exclude_dirs = ["tests"]
# Skip specific checks:
# B105: hard-coded password strings (not applicable to this codebase)
skips = ["B105"]
